--- a/garden-shop/dev/components/header/header.scss
+++ b/garden-shop/dev/components/header/header.scss
@@ -1,232 +1,3 @@
 .header {
-	&__container {
-		position: relative;
-	}
-	&__wrapper {
-		padding: 30px 0;
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		width: 100%;
-	}
-	&__logo {
-		flex: 0 0 132px;
-		img {
-			max-width: 100%;
-		}
-	}
-	&__menu {
-		flex: 1 1 auto;
-		display: flex;
-		justify-content: center;
-	}
-}
-// ---------------------
-.menu {
-	&__list {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 44px;
-	}
-}
-// --------------------- 
-// Многоуровневое меню
-.menu-sub {
-	padding-right: 19px;
-	position: relative;
-	&::after {
-		content: "";
-		position: absolute;
-		right: 0;
-		top: 5px;
-		width: 10px;
-		height: 6px;
-		background: url('../img/icons/arrow-short.svg') center center/cover no-repeat;
-		transition: all 0.3s ease 0s;
-	}
-	&__list {
-		position: absolute;
-		left: 0;
-		top: 130%;
-		z-index: 2;
-
-		user-select: none;
-		overflow: hidden;
-		opacity: 0;
-
-		transition: all 0.3s ease 0s;
-	}
-	&__item {
-    display: block;
-    padding: 6px 16px;
-    border-radius: 12px;
-		background-color: #fff;
-    width: 100%;
-    color: #848484;
-    transition:  all 0.3s ease 0s;
-	}
-	@media (min-width: 992px){
-		&:hover {
-			&::after {
-				transform: rotate(-180deg);
-			}
-			.menu-sub {
-				&__list {
-					opacity: 1;
-					pointer-events: all;
-					user-select: all;
-					overflow: visible;
-				}
-			}
-		}
-	}
-}
-.multilevel-menu_open {
-	.menu-sub {
-		&__list {
-			height: auto;
-			position: static;
-			opacity: 1;
-			pointer-events: all;
-			user-select: all;
-			overflow: visible;
-		}
-	}
-}
-// Конец многоуровневого меню
-// ---------------------
-.burger {
-	border: 0;
-	background: 0;
-	height: 18px;
-	width: 32px;
-	display: none;
-	position: relative;
-	flex-direction: column;
-	justify-content: space-between;
-	span,
-	&::after,
-	&::before {
-		background-color: var(--black);
-		position: absolute;
-		left: 0;
-		transition:  all 0.3s ease 0s;
-	}
-	span {
-		top: 50%;
-		transform: translateY(-50%);
-		width: 100%;
-		height: 3px;
-	}
-	&::before,
-	&::after {
-		content: "";
-		height: 3px;
-		width: 100%;
-	}
-	&::before {
-		top: 0;
-	}
-	&::after {
-		bottom: 0;
-	}
-	&.active {
-		span,
-		&::after,
-		&::before {
-			background-color: var(--white);
-		}
-		span {
-			transform: scale(0);
-		}
-		&::after {
-			transform: rotate(-45deg);
-			bottom: 7px;
-		}
-		&::before {
-			transform: rotate(45deg);
-			top: 8px;
-		}
-	}
-	&:focus-visible {
-		outline: none;
-	}
-}
-// ---------------------
-@media (max-width: 991.98px) {
-	.burger {
-		display: flex;
-	}
-	.menu,
-	.menu__list {
-		display: flex;
-		flex-direction: column;
-	}
-	.menu {
-		padding: 10px 20px;
-		position: absolute;
-		top: 100%;
-		right: 0;
-		z-index: 5;
-		background-color: #000;
-		transform: translate(0px, 10%);
-		opacity: 0;
-		visibility: hidden;
-		pointer-events: none;
-		transition:  all 0.3s ease 0s;
-		&__item {
-			width: 100%;
-		}
-		a {
-			width: 100%;
-			color: #fff;
-			font-weight: 400;
-			font-size: 16px;
-			line-height: 1;
-		}
-		&.active {
-			opacity: 1;
-			visibility: visible;
-			transform: translate(0px, 0px);
-			pointer-events: all;
-		}
-	}
-	// Многоуровневое меню
-	.menu-sub {
-		&__list {
-			height: 0;
-		}
-	}
-}
-
-// Расположения меню на весь экран
-@media (max-width: 600px){
-	.header {
-		&__menu {
-			padding-top: calc(75px + (80 - 75) * ((100vw - 320px) / 992));
-			top: 0;
-			width: 100%;
-			height: 100%;
-			min-height: 100vh;
-			nav {
-				overflow-y: auto;
-				flex: 1 1 auto;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				text-align: center;
-			}
-		}
-		&__logo,
-		.burger {
-			position: relative;
-			z-index: 10;
-		}
-	}
-	.menu {
-		&__list {
-			margin-top: 18px;
-			flex-wrap: nowrap;
-		}
-	}
+    background-color: red;
 }
