--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -1,3 +1,24 @@
+html {
+	font-size: 16px;
+}
+
 @function toRem($pxValue) {
-	@return ($pxValue / 18px) * 1rem;
+	@return calc(($pxValue / 16) * 1rem);
+}
+
+.main {
+	font-size: 24px;
+	position: relative;
+}
+
+// ui
+.btn {
+	font-size: toRem(16);
+	line-height: 1;
+	padding: 0.875em 1.5625em;
+	background-color: #333;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: fit-content;
 }
