--- a/garden-shop/release/components/header/header.html
+++ b/garden-shop/release/components/header/header.html
@@ -11,7 +11,6 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
-	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/style-result.css" />
 	<title>@@title</title>
 </head>
@@ -20,34 +19,24 @@
 	<div class="body-wrapper">
 		<header class="header">
 			<div class="container">
-				<div class="header__line">
-					<div class="header__line-logo">
-						<img src="" alt="">
-					</div>
-					<div class="header__line-discount">-10%</div>
-					<div class="header__line-text">Минитрактор Shifeng SF-240В</div>
-					<div class="header__line-img">
-						<img src="" alt="">
-					</div>
-				</div>
 				<div class="header__wrapper">
 					<a href="/" class="header__logo">
 						<img src="" alt="logo">
 					</a>
 					<nav class="header__nav nav">
 						<ul class="nav__menu">
-							<li class="nav__item nav__item nav__item_has-children">
-								<a class="nav__link nav__link_lvl1" href=""></a>
+							<!-- Многоуровневое меню -->
+							<li class="nav__item nav__item_lvl1 nav__item_has-children">
+								<a class="nav__link" href="#"></a>
 								<ul class="nav__submenu">
-									<li class="nav__item nav__item"><a class="nav__link nav__link_lvl2" href=""></a>
-									</li>
-									<li class="nav__item nav__item"><a class="nav__link nav__link_lvl2" href=""></a>
-									</li>
+									<li class="nav__item nav__item_lvl2"><a class="nav__link" href="#"></a></li>
+									<li class="nav__item nav__item_lvl1"><a class="nav__link" href="#"></a></li>
 								</ul>
 							</li>
-							<li class="nav__item"><a class="nav__link nav__link_lvl1" href=""></a></li>
-							<li class="nav__item"><a class="nav__link nav__link_lvl1" href=""></a></li>
-							<li class="nav__item"><a class="nav__link nav__link_lvl1" href=""></a></li>
+							<!--//Многоуровневое меню -->
+							<li class="nav__item"><a class="nav__link" href="#"></a></li>
+							<li class="nav__item"><a class="nav__link" href="#"></a></li>
+							<li class="nav__item"><a class="nav__link" href="#"></a></li>
 						</ul>
 					</nav>
 					<div class="header__menu-btn"><span></span></div>
