--- a/garden-shop/release/components/header/header.html
+++ b/garden-shop/release/components/header/header.html
@@ -11,6 +11,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
+	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/style-result.css" />
 	<title>@@title</title>
 </head>
@@ -18,28 +19,166 @@
 <body>
 	<div class="body-wrapper">
 		<header class="header">
+			<div class="header__line">
+				<div class="header__line-logo">
+					<img src="../../images/header-line-logo.svg" alt="logo">
+				</div>
+				<div class="header__line-discount">-10%</div>
+				<div class="header__line-text">Минитрактор Shifeng SF-240В</div>
+				<div class="header__line-img">
+					<img src="../../images/header-line-img.png" alt="img">
+				</div>
+			</div>
 			<div class="container">
 				<div class="header__wrapper">
-					<a href="/" class="header__logo">
-						<img src="" alt="logo">
-					</a>
-					<nav class="header__nav nav">
-						<ul class="nav__menu">
-							<!-- Многоуровневое меню -->
-							<li class="nav__item nav__item_lvl1 nav__item_has-children">
-								<a class="nav__link" href="#"></a>
-								<ul class="nav__submenu">
-									<li class="nav__item nav__item_lvl2"><a class="nav__link" href="#"></a></li>
-									<li class="nav__item nav__item_lvl1"><a class="nav__link" href="#"></a></li>
-								</ul>
-							</li>
-							<!--//Многоуровневое меню -->
-							<li class="nav__item"><a class="nav__link" href="#"></a></li>
-							<li class="nav__item"><a class="nav__link" href="#"></a></li>
-							<li class="nav__item"><a class="nav__link" href="#"></a></li>
-						</ul>
-					</nav>
-					<div class="header__menu-btn"><span></span></div>
+					<div class="header__top">
+						<div class="header__region caption">
+							<div class="header__region-title">Санкт-Петербург, Ленинградская область</div>
+							<div class="header__region-list">
+								<div class="header__region-item"><a href="">Санкт-Петербург, Ленинградская область</a>
+								</div>
+								<div class="header__region-item"><a href="">Санкт-Петербург, Ленинградская область</a>
+								</div>
+								<div class="header__region-item"><a href="">Санкт-Петербург, Ленинградская область</a>
+								</div>
+							</div>
+						</div>
+						<div class="header__links caption">
+							<a href="" class="header__link">
+								<span>
+									<svg width="20" height="20" viewBox="0 0 20 21" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M1.9458 9.11397C1.68476 8.87256 1.82656 8.43615 2.17964 8.39429L7.18262 7.80112C7.32652 7.78406 7.45151 7.69339 7.51221 7.5618L9.6224 2.98692C9.77132 2.66406 10.2303 2.66401 10.3792 2.98688L12.4894 7.56187C12.5501 7.69346 12.6743 7.78407 12.8182 7.80113L17.8215 8.39429C18.1745 8.43615 18.3162 8.87259 18.0552 9.11399L14.3566 12.5346C14.2502 12.633 14.2027 12.7796 14.231 12.9218L15.2126 17.8633C15.2819 18.212 14.9108 18.4817 14.6005 18.308L10.2044 15.8473C10.078 15.7765 9.92392 15.7764 9.79747 15.8472L5.40091 18.3081C5.09065 18.4817 4.71912 18.2121 4.78841 17.8633L5.77031 12.9217C5.79855 12.7796 5.75111 12.633 5.64472 12.5347L1.9458 9.11397Z"
+											stroke="#8A8894" stroke-width="1.5" stroke-linecap="round"
+											stroke-linejoin="round" />
+									</svg>
+								</span>
+								Программа лояльности
+							</a>
+							<a href="" class="header__link">
+								<span>
+									<svg width="20" height="20" viewBox="0 0 20 21" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M1.66602 17.1667H18.3327M9.99935 17.1667H16.666V12.4734C16.666 12.0356 16.666 11.8167 16.6135 11.6125C16.567 11.4315 16.4903 11.2597 16.3868 11.1041C16.2699 10.9286 16.1073 10.7822 15.7816 10.4896L13.8649 8.76772C13.2349 8.20173 12.9198 7.91875 12.5636 7.8114C12.2499 7.71684 11.9153 7.71684 11.6016 7.8114C11.2455 7.91875 10.9305 8.20173 10.3005 8.76772L9.99935 9.0383M9.99935 17.1667V6.49996C9.99935 5.56654 9.99953 5.09989 9.81787 4.74337C9.65808 4.42976 9.40277 4.17478 9.08917 4.01499C8.73265 3.83333 8.26627 3.83333 7.33285 3.83333H5.99951C5.06609 3.83333 4.59903 3.83333 4.24251 4.01499C3.92891 4.17478 3.67413 4.42976 3.51434 4.74337C3.33268 5.09989 3.33268 5.56654 3.33268 6.49996V17.1667H9.99935Z"
+											stroke="#8A8894" stroke-width="1.5" stroke-linecap="round"
+											stroke-linejoin="round" />
+									</svg>
+								</span>
+								Филиалы
+							</a>
+							<a href="" class="header__link">
+								<span>
+									<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M10 6.33333V10.5H14.1667M10 18C5.85786 18 2.5 14.6421 2.5 10.5C2.5 6.35786 5.85786 3 10 3C14.1421 3 17.5 6.35786 17.5 10.5C17.5 14.6421 14.1421 18 10 18Z"
+											stroke="#8A8894" stroke-width="1.5" stroke-linecap="round"
+											stroke-linejoin="round" />
+									</svg>
+								</span>
+								Статус заказа
+							</a>
+							<a href="" class="header__link">
+								<span>
+									<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M10 8.66671V17.1667M10 8.66671C10 7.26658 10 6.5665 10.2725 6.03172C10.5122 5.56131 10.8947 5.17884 11.3652 4.93915C11.8999 4.66667 12.5997 4.66667 13.9998 4.66667H16.1665C16.6332 4.66667 16.8667 4.66667 17.0449 4.7575C17.2017 4.83739 17.3294 4.96488 17.4093 5.12169C17.5001 5.29994 17.5 5.53327 17.5 5.99998V13.3333C17.5 13.8 17.5001 14.0334 17.4093 14.2117C17.3294 14.3685 17.2017 14.4959 17.0449 14.5758C16.8667 14.6667 16.6333 14.6667 16.1666 14.6667H13.8074C13.0247 14.6667 12.6335 14.6667 12.2782 14.7745C11.9638 14.87 11.6713 15.0266 11.4174 15.2353C11.1306 15.471 10.9134 15.7967 10.4792 16.4479L10 17.1667M10 8.66671C10 7.26658 9.99986 6.5665 9.72738 6.03172C9.48769 5.56131 9.10554 5.17884 8.63514 4.93915C8.10036 4.66667 7.40021 4.66667 6.00008 4.66667H3.83341C3.3667 4.66667 3.13318 4.66667 2.95492 4.7575C2.79811 4.83739 2.67072 4.96488 2.59083 5.12169C2.5 5.29994 2.5 5.53327 2.5 5.99998V13.3333C2.5 13.8 2.5 14.0334 2.59083 14.2117C2.67072 14.3685 2.79811 14.4959 2.95492 14.5758C3.13318 14.6667 3.3667 14.6667 3.83341 14.6667H6.19268C6.97536 14.6667 7.36664 14.6667 7.72186 14.7745C8.03634 14.87 8.32886 15.0266 8.58276 15.2353C8.86956 15.471 9.08652 15.7967 9.52067 16.4479L10 17.1667"
+											stroke="#8A8894" stroke-width="1.5" stroke-linecap="round"
+											stroke-linejoin="round" />
+									</svg>
+								</span>
+								Новости
+							</a>
+							<a href="" class="header__link">
+								<span>
+									<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M13.3333 7.16667C13.3333 5.32572 11.8409 3.83333 10 3.83333C8.15905 3.83333 6.66667 5.32572 6.66667 7.16667M17.5 9.83329V14.5C17.5 15.4334 17.5002 15.9002 17.3185 16.2567C17.1587 16.5703 16.9034 16.8252 16.5898 16.985C16.2333 17.1666 15.7669 17.1667 14.8335 17.1667H5.16683C4.23341 17.1667 3.76635 17.1666 3.40983 16.985C3.09623 16.8252 2.84144 16.5703 2.68166 16.2567C2.5 15.9002 2.5 15.4334 2.5 14.5V9.83329C2.5 8.89987 2.5 8.43322 2.68166 8.0767C2.84144 7.7631 3.09623 7.50811 3.40983 7.34832C3.76635 7.16667 4.23341 7.16667 5.16683 7.16667H14.8335C15.7669 7.16667 16.2333 7.16667 16.5898 7.34832C16.9034 7.50811 17.1587 7.7631 17.3185 8.0767C17.5002 8.43322 17.5 8.89987 17.5 9.83329Z"
+											stroke="#8A8894" stroke-width="1.5" stroke-linecap="round"
+											stroke-linejoin="round" />
+									</svg>
+								</span>
+								Для бизнеса
+							</a>
+							<a href="" class="header__link">
+								<span>
+									<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M6.25854 17.0015C7.35979 17.6366 8.63751 18 10.0001 18C14.1422 18 17.5 14.6421 17.5 10.5C17.5 6.35786 14.1421 3 10 3C5.85786 3 2.5 6.35786 2.5 10.5C2.5 11.8626 2.86337 13.1403 3.49849 14.2416L3.49902 14.2425C3.56142 14.3507 3.59269 14.4049 3.6068 14.4559C3.61996 14.5036 3.62431 14.5461 3.62094 14.5954C3.61736 14.6477 3.59929 14.7019 3.56357 14.809L3.56223 14.813L2.92155 16.7351L2.92105 16.7366C2.78567 17.1427 2.71795 17.3459 2.76616 17.4811C2.80817 17.5989 2.901 17.6916 3.0188 17.7336C3.15417 17.7819 3.35794 17.7141 3.76506 17.5784L5.68711 16.9377L5.68844 16.9372C5.79734 16.9009 5.85177 16.8828 5.90452 16.8792C5.95382 16.8758 5.99648 16.8801 6.04411 16.8932C6.09528 16.9074 6.14975 16.9387 6.25854 17.0015Z"
+											stroke="#8A8894" stroke-width="1.5" stroke-linecap="round"
+											stroke-linejoin="round" />
+									</svg>
+								</span>
+							</a>
+							<a href="" class="header__link demibold orange-text">8 800 101 17 16</a>
+						</div>
+					</div>
+					<div class="header__btm">
+						<a href="/" class="header__logo">
+							<img src="../../images/Logo.svg" alt="logo">
+						</a>
+						<div class="header__body">
+							<div class="header__search search">
+								<form class="search__form">
+									<input type="text" class="search__input" placeholder="Поиск по каталогу">
+									<button class="search__btn btn">
+										Найти
+										<span>
+											<svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+												xmlns="http://www.w3.org/2000/svg">
+												<path
+													d="M13.0303 11.9697C12.7374 11.6768 12.2626 11.6768 11.9697 11.9697C11.6768 12.2626 11.6768 12.7374 11.9697 13.0303L13.0303 11.9697ZM16.9697 18.0303C17.2626 18.3232 17.7374 18.3232 18.0303 18.0303C18.3232 17.7374 18.3232 17.2626 18.0303 16.9697L16.9697 18.0303ZM8.33333 13.4167C5.52589 13.4167 3.25 11.1408 3.25 8.33333H1.75C1.75 11.9692 4.69746 14.9167 8.33333 14.9167V13.4167ZM3.25 8.33333C3.25 5.52589 5.52589 3.25 8.33333 3.25V1.75C4.69746 1.75 1.75 4.69746 1.75 8.33333H3.25ZM8.33333 3.25C11.1408 3.25 13.4167 5.52589 13.4167 8.33333H14.9167C14.9167 4.69746 11.9692 1.75 8.33333 1.75V3.25ZM13.4167 8.33333C13.4167 11.1408 11.1408 13.4167 8.33333 13.4167V14.9167C11.9692 14.9167 14.9167 11.9692 14.9167 8.33333H13.4167ZM11.9697 13.0303L16.9697 18.0303L18.0303 16.9697L13.0303 11.9697L11.9697 13.0303Z"
+													fill="white" />
+											</svg>
+										</span>
+									</button>
+								</form>
+							</div>
+							<a href="" class="btn">Заказать звонок</a>
+							<a href="" class="header__body-btn caption">
+								<div class="header__body-btn-icon">
+									<svg width="24" height="24" viewBox="0 0 24 25" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M14.5714 21.5H15.0714V21V5C15.0714 4.17157 14.3999 3.5 13.5714 3.5H10.4286C9.60014 3.5 8.92857 4.17157 8.92857 5V21V21.5H9.42857H14.5714ZM8.64286 11.8462V11.3462H8.14286H4C3.17157 11.3462 2.5 12.0177 2.5 12.8462V20C2.5 20.8284 3.17157 21.5 4 21.5H8.14286H8.64286V21V11.8462ZM15.8571 7.42308H15.3571V7.92308V21V21.5H15.8571H20C20.8284 21.5 21.5 20.8284 21.5 20V8.92308C21.5 8.09465 20.8284 7.42308 20 7.42308H15.8571Z"
+											stroke="#124144" />
+									</svg>
+									<span></span>
+								</div>
+								Сравнение
+							</a>
+							<a href="" class="header__body-btn caption">
+								<div class="header__body-btn-icon">
+									<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M12 8.19444C10 3.5 3 4 3 10C3 16.0001 12 21 12 21C12 21 21 16.0001 21 10C21 4 14 3.5 12 8.19444Z"
+											stroke="#124144" stroke-linecap="round" stroke-linejoin="round" />
+									</svg>
+									<span></span>
+								</div>
+								Избранное
+							</a>
+							<a href="" class=" header__body-btn header__body-btn_notification caption">
+								<div class="header__body-btn-icon">
+									<svg width="24" height="24" viewBox="0 0 25 25" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M17.5 17.5C16.3954 17.5 15.5 18.3954 15.5 19.5C15.5 20.6046 16.3954 21.5 17.5 21.5C18.6046 21.5 19.5 20.6046 19.5 19.5C19.5 18.3954 18.6046 17.5 17.5 17.5ZM17.5 17.5H9.79395C9.33269 17.5 9.10197 17.5 8.91211 17.418C8.74466 17.3456 8.59934 17.2288 8.49349 17.0802C8.37348 16.9118 8.32609 16.6863 8.22945 16.2353L5.77148 4.76477C5.67484 4.31376 5.62587 4.08825 5.50586 3.9198C5.40002 3.77123 5.25525 3.65441 5.0878 3.58205C4.89794 3.5 4.66779 3.5 4.20653 3.5H3.5M6.5 6.5H19.3732C20.095 6.5 20.4557 6.5 20.6979 6.65036C20.9101 6.78206 21.0652 6.98838 21.1329 7.22876C21.2102 7.50319 21.111 7.84996 20.911 8.54346L19.5264 13.3435C19.4068 13.7581 19.3469 13.9655 19.2256 14.1193C19.1185 14.2551 18.9772 14.3608 18.8171 14.426C18.6356 14.5 18.4199 14.5 17.9883 14.5H8.23047M8.5 21.5C7.39543 21.5 6.5 20.6046 6.5 19.5C6.5 18.3954 7.39543 17.5 8.5 17.5C9.60457 17.5 10.5 18.3954 10.5 19.5C10.5 20.6046 9.60457 21.5 8.5 21.5Z"
+											stroke="#124144" stroke-linecap="round" stroke-linejoin="round" />
+									</svg>
+									<span>2</span>
+								</div>
+								Корзина
+							</a>
+							<a href="" class="header__login"></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</header>
