--- a/garden-shop/release/components/header/header.html
+++ b/garden-shop/release/components/header/header.html
@@ -13,6 +13,9 @@
 
 	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/style-result.css" />
+
+	<script src="../../js/main.js"></script>
+
 	<title>@@title</title>
 </head>
 
@@ -118,7 +121,7 @@
 							<a href="" class="header__link demibold orange-text">8 800 101 17 16</a>
 						</div>
 					</div>
-					<div class="header__btm">
+					<div class="header__mid">
 						<a href="/" class="header__logo">
 							<img src="../../images/Logo.svg" alt="logo">
 						</a>
@@ -177,6 +180,25 @@
 								Корзина
 							</a>
 							<a href="" class="header__login"></a>
+						</div>
+					</div>
+					<div class="header__btm">
+						<a href="" class="header__nav-btn btn btn_green ">
+							<span>
+								<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path d="M12 17L5 17M19 12H5M19 7H5" stroke="white" stroke-linecap="round"
+										stroke-linejoin="round" />
+								</svg>
+							</span>
+							Каталог
+						</a>
+						<div class="header__nav-links">
+							<a href="" class="header__nav-link orange-text">Все акции</a>
+							<a href="" class="header__nav-link ">Распродажа 01.05-31.05</a>
+							<a href="" class="header__nav-link ">Сезонные товары</a>
+							<a href="" class="header__nav-link ">Минитракторы Shifeng</a>
+							<a href="" class="header__nav-link ">Экспресс-доставка</a>
 						</div>
 					</div>
 				</div>
