--- a/garden-shop/dev/components/footer/footer.html
+++ b/garden-shop/dev/components/footer/footer.html
@@ -2,7 +2,158 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__wrapper">
+            <nav class="footer__nav">
+                <ul class="footer__nav-list">
+                    <li class="footer__nav-item footer__nav-item_has-children">
+                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Покупателям</a>
+                        <ul class="footer__subnav">
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Минитракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Мотоблоки</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Навесное оборудование</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Двигатели</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Запасные части</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Гарантия и сервис</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Постановка трактора на
+                                    учет</a></li>
+                        </ul>
+                    </li>
+                    <li class="footer__nav-item footer__nav-item_has-children">
+                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Для бизнеса</a>
+                        <ul class="footer__subnav">
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Навесное оборудование</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Минитракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Мотоблоки</a></li>
 
+                        </ul>
+                    </li>
+                    <li class="footer__nav-item footer__nav-item_has-children">
+                        <a class="footer__nav-link footer__nav-link_lvl1" href="">О компании</a>
+                        <ul class="footer__subnav">
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">СКАУТ ТМ</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Франшиза</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Контакты</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Новости</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Статьи</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Отзывы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Видео</a></li>
+                        </ul>
+                    </li>
+                    <li class="footer__nav-item footer__nav-item_has-children">
+                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Блог</a>
+                        <ul class="footer__subnav">
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">СКАУТ ТМ</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Франшиза</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Контакты</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Новости</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <div class="footer__info">
+                <div class="footer__info-top">
+                    <div class="footer__info-tel">
+                        <a href="8 (800) 101-17-16" class="footer__info-tel-link demibold">8 (800) 101-17-16</a>
+                        <div class="footer__info-tel-label caption">Бесплатная линия по России</div>
+                    </div>
+                    <a href="" class="footer__info-btn btn">Заказать звонок</a>
+                </div>
+                <div class="footer__info-btm">
+                    <div class="footer__info-item">
+                        <div class="footer__info-title caption demibold">Мы принимаем к оплате</div>
+                        <div class="footer__info-payment">
+                            <img src="../../images/mastercard.png" alt="">
+                            <img src="../../images/visa.png" alt="">
+                            <img src="../../images/mir.png" alt="">
+                        </div>
+                    </div>
+                    <div class="footer__info-item">
+                        <div class="footer__info-title caption demibold">Мы в социальных сетях</div>
+                        <div class="footer__info-social">
+                            <a href="" class="footer__info-social-link">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M2.20228 0.13895C1.43405 0.400816 0.826161 0.89621 0.417329 1.59357C-0.0184285 2.33681 0.00152184 1.84112 0.000621829 11.9806C-0.000278187 22.352 -0.0324538 21.6918 0.51528 22.539C0.938738 23.1937 1.54032 23.6453 2.29364 23.8737C2.84894 24.0421 21.1511 24.0421 21.7064 23.8737C22.4597 23.6453 23.0613 23.1937 23.4847 22.539C24.0325 21.6918 24.0003 22.352 23.9994 11.9806C23.9985 1.85596 24.0175 2.33524 23.5882 1.60309C23.2946 1.10222 23.0244 0.817943 22.5514 0.51237C21.7032 -0.0355777 22.3704 -0.00349113 11.9509 0.00235644C3.23535 0.00722941 2.56071 0.0166754 2.20228 0.13895ZM12.9105 7.86089C13.2422 8.02755 13.275 8.21235 13.275 9.91736C13.275 11.2365 13.295 11.5374 13.3918 11.6755C13.5787 11.9423 13.7592 11.8745 14.195 11.3736C14.799 10.6793 15.472 9.54162 15.8245 8.61853C16.0306 8.07913 15.9783 8.09375 17.7026 8.09375C19.4466 8.09375 19.4797 8.10342 19.4006 8.59041C19.3323 9.01129 19.0377 9.50968 18.0827 10.8197C17.597 11.4859 17.1604 12.1044 17.1124 12.194C16.9101 12.5719 16.9877 12.7157 17.9063 13.6658C18.391 14.1671 18.8075 14.5944 18.8317 14.6154C18.856 14.6364 18.9994 14.8344 19.1505 15.0555C19.5239 15.6022 19.5378 15.8272 19.2147 16.0963C19.0237 16.2553 18.9462 16.2646 17.8072 16.265C16.1311 16.2655 16.092 16.2497 14.9928 15.1284C14.0795 14.1967 13.8855 14.0896 13.6275 14.3746C13.4867 14.53 13.275 15.2891 13.275 15.6385C13.275 15.8119 13.2171 15.9256 13.0688 16.0433C12.8756 16.1967 12.8033 16.2048 11.925 16.1728C11.134 16.144 10.8865 16.1036 10.3411 15.9144C9.2197 15.5256 8.23621 14.7407 7.30492 13.4915C6.2993 12.1427 4.633 9.00267 4.6195 8.43111L4.61237 8.13123L5.9249 8.11031C6.86721 8.09524 7.28715 8.11579 7.4136 8.18318C7.5297 8.24496 7.73625 8.58472 8.01893 9.17869C8.7805 10.7791 9.58496 11.8718 9.96881 11.8272C10.2665 11.7926 10.341 11.4535 10.3446 10.1179C10.3482 8.78211 10.3086 8.64889 9.84371 8.43305C9.66836 8.35164 9.52496 8.24721 9.52496 8.20103C9.52496 8.09067 9.74351 7.89628 9.97654 7.79942C10.2519 7.68494 12.6606 7.73539 12.9105 7.86089Z"
+                                        fill="#C9C8D3" />
+                                </svg>
+                            </a>
+                            <a href="" class="footer__info-social-link">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M0 3C0 1.34315 1.34315 0 3 0H21C22.6569 0 24 1.34315 24 3V21C24 22.6569 22.6569 24 21 24H3C1.34315 24 0 22.6569 0 21V3Z"
+                                        fill="#C9C8D3" />
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M15.1048 7.08822C16.9629 7.21756 17.5621 7.37689 18.1506 7.89819C18.6356 8.32784 18.7679 8.73095 18.9217 10.247C19.1182 12.1854 18.9273 14.926 18.5452 15.6504C18.399 15.9278 17.9404 16.3281 17.5659 16.5055C16.844 16.8475 15.1261 17 11.9961 17C8.87117 17 7.0785 16.84 6.39966 16.5005C6.04237 16.3217 5.58638 15.9149 5.44691 15.6504C4.85103 14.5206 4.85103 9.48931 5.44691 8.3595C5.68445 7.90914 6.33551 7.47242 7.03278 7.2957C8.12338 7.01936 12.4987 6.90686 15.1048 7.08822ZM10.2297 12.005C10.2297 14.2471 10.2448 14.6374 10.3313 14.6374C10.3871 14.6374 11.2216 14.1592 12.1859 13.5748C13.1501 12.9903 14.1219 12.4064 14.3453 12.277C14.5687 12.1477 14.7515 12.0253 14.7515 12.005C14.7515 11.9847 14.5687 11.8624 14.3453 11.7333C14.1219 11.6042 13.1518 11.0202 12.1896 10.4355C11.2274 9.85085 10.3928 9.37251 10.335 9.37251C10.2436 9.37251 10.2297 9.71992 10.2297 12.005Z"
+                                        fill="white" />
+                                </svg>
+                            </a>
+                            <a href="" class="footer__info-social-link">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M2.20228 0.13895C1.43405 0.400816 0.826161 0.89621 0.417329 1.59357C-0.0184285 2.33681 0.00152184 1.84112 0.000621829 11.9806C-0.000278187 22.352 -0.0324538 21.6918 0.51528 22.539C0.938738 23.1937 1.54032 23.6453 2.29364 23.8737C2.84894 24.0421 21.1511 24.0421 21.7064 23.8737C22.4597 23.6453 23.0613 23.1937 23.4847 22.539C24.0325 21.6918 24.0003 22.352 23.9994 11.9806C23.9985 1.85596 24.0175 2.33524 23.5882 1.60309C23.2946 1.10222 23.0244 0.817943 22.5514 0.51237C21.7032 -0.0355777 22.3704 -0.00349113 11.9509 0.00235644C3.23535 0.00722941 2.56071 0.0166754 2.20228 0.13895ZM19.2714 6.40305C19.4875 6.63298 19.4851 6.72744 19.2354 7.83135C19.1235 8.32615 18.9898 8.9334 18.9382 9.18079C18.8867 9.42819 18.7703 9.9511 18.6796 10.3428C18.4035 11.5362 18.1126 12.8136 17.6639 14.8035C17.1187 17.2214 17.043 17.4881 16.8629 17.6266C16.5224 17.8884 16.2157 17.81 15.4061 17.2543C13.8224 16.1673 12.5138 15.2908 12.4749 15.2908C12.404 15.2908 11.9856 15.6608 11.2359 16.3866C10.6335 16.9697 10.4691 17.09 10.2747 17.09C9.76976 17.09 9.80741 17.16 8.96417 14.6535C8.68682 13.8289 8.43099 13.1002 8.39574 13.0341C8.35779 12.9631 8.03168 12.8327 7.59705 12.7145C7.19302 12.6048 6.76116 12.4854 6.63741 12.4492C6.51366 12.4131 6.05802 12.2905 5.62489 12.1768C4.71895 11.9392 4.558 11.8353 4.58995 11.5087C4.61042 11.3002 4.6588 11.2623 5.13738 11.0804C5.68992 10.8706 6.80474 10.4622 7.68743 10.1463C7.97618 10.043 8.43181 9.87838 8.69994 9.78054C8.96807 9.68271 9.60933 9.45173 10.125 9.26731C12.4809 8.42466 13.0457 8.22232 13.5188 8.05161C13.7973 7.95108 14.2697 7.7815 14.5688 7.67482C14.8679 7.56806 15.4332 7.3637 15.8251 7.22066C16.2169 7.07762 16.757 6.88142 17.0251 6.78471C17.2932 6.688 17.732 6.52442 18.0001 6.42119C18.6549 6.16915 19.0464 6.16352 19.2714 6.40305ZM16.1722 8.46836C15.8896 8.63337 15.6502 8.76847 15.64 8.76847C15.6299 8.76847 15.3214 8.94164 14.9545 9.15321C12.1554 10.7679 10.1337 11.9253 9.28435 12.3992C9.13135 12.4845 8.97662 12.6207 8.9404 12.7017C8.89225 12.8096 9.01697 13.2694 9.40661 14.4199C9.69926 15.2839 9.97459 16.0028 10.0185 16.0175C10.0985 16.0441 10.218 15.3865 10.3183 14.3666C10.3742 13.7984 10.3569 13.8224 11.2125 13.1309C11.5012 12.8974 12.1088 12.4009 12.5625 12.0273C13.0163 11.6537 13.8222 10.9954 14.3535 10.5643C14.8849 10.1333 15.3574 9.74643 15.4036 9.70483C15.4498 9.66314 15.8011 9.37706 16.1843 9.06909C16.6901 8.66268 16.8751 8.46926 16.8593 8.36356C16.8248 8.13258 16.7196 8.14862 16.1722 8.46836Z"
+                                        fill="#C9C8D3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer__dev caption demibold">
+        <div class="container">
+            <div class="footer__dev-wrapper">
+                <div class="footer__dev-links ">
+                    <div class="">© 2012 - 2023, Gardenshop, Ltd</div>
+                    <a href="">Политика обработки персональных данных</a>
+                    <a href="">Лицензионное соглашение</a>
+                    <a href="">Карта сайта</a>
+                </div>
+                <a href="https://nastart-web.ru/" target="_blank" class="footer__dev-author">
+                    Разработка сайта
+                    <svg width="110" height="12" viewBox="0 0 110 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_1484_14929)">
+                            <path d="M68.0441 11.225V2.18536H64.6543V0.5H73.3337V2.18536H69.9438V11.225H68.0441Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M54.6934 11.225V0.5H58.9012C59.8073 0.5 60.5817 0.653215 61.2244 0.959645C61.8771 1.26607 62.3791 1.70529 62.7296 2.27729C63.0801 2.84929 63.2558 3.52854 63.2558 4.31503C63.2558 5.10153 63.0801 5.78078 62.7296 6.35278C62.3791 6.91459 61.8771 7.34866 61.2244 7.65511C61.179 7.67613 61.1328 7.6964 61.0858 7.71592L63.431 11.225H61.3854L59.3016 8.08937C59.1711 8.09609 59.0376 8.09941 58.9012 8.09941H56.5927V11.225H54.6934ZM56.5927 6.46003H58.8136C59.6514 6.46003 60.2795 6.27109 60.6986 5.89314C61.1273 5.51522 61.3414 4.98916 61.3414 4.31503C61.3414 3.63068 61.1273 3.10465 60.6986 2.73693C60.2795 2.36921 59.6514 2.18536 58.8136 2.18536H56.5927V6.46003Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M41.5703 11.225L46.1731 0.5H48.0431L52.6605 11.225H50.6732L49.6568 8.74291L49.3367 7.96153L49.0166 7.18014L47.0941 2.48643L45.1787 7.18014H49.0166L49.3367 7.96153L49.6568 8.74291H44.541L43.5283 11.225H41.5703Z"
+                                fill="#C9C8D3" />
+                            <path d="M36.0872 11.225V2.18536H32.6973V0.5H41.3765V2.18536H37.9867V11.225H36.0872Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M27.4293 11.225C26.6305 11.225 25.8658 11.1108 25.1353 10.8824C24.4047 10.6441 23.8251 10.3412 23.3965 9.97375L24.054 8.46928C24.4631 8.79697 24.9697 9.07006 25.5736 9.28853C26.1776 9.507 26.7961 9.61625 27.4293 9.61625C27.965 9.61625 28.3985 9.55666 28.7297 9.4375C29.0609 9.31835 29.3044 9.15944 29.4603 8.96085C29.6161 8.75228 29.6941 8.51894 29.6941 8.26072C29.6941 7.94294 29.5821 7.68972 29.358 7.50103C29.134 7.30244 28.8417 7.1485 28.4813 7.03928C28.1306 6.92009 27.7361 6.81088 27.2978 6.71156C26.8692 6.61225 26.4357 6.49806 25.9974 6.36897C25.5687 6.22994 25.1742 6.05616 24.8138 5.84759C24.4631 5.62912 24.1758 5.34116 23.9517 4.98366C23.7277 4.62616 23.6157 4.16934 23.6157 3.61323C23.6157 3.04719 23.7618 2.5308 24.054 2.06406C24.356 1.5874 24.809 1.21003 25.4129 0.931978C26.0266 0.643993 26.801 0.5 27.7361 0.5C28.3498 0.5 28.9586 0.579445 29.5626 0.738334C30.1665 0.897222 30.6925 1.12563 31.1406 1.42354L30.5416 2.92802C30.0837 2.64997 29.6113 2.44639 29.1242 2.31729C28.6372 2.17826 28.1696 2.10875 27.7215 2.10875C27.1955 2.10875 26.7669 2.1733 26.4357 2.3024C26.1143 2.43149 25.8756 2.60031 25.7197 2.80885C25.5736 3.0174 25.5006 3.25573 25.5006 3.52385C25.5006 3.84163 25.6077 4.09981 25.822 4.29844C26.0461 4.48713 26.3334 4.63606 26.6841 4.74531C27.0445 4.85457 27.4439 4.96378 27.8822 5.07303C28.3206 5.17231 28.7541 5.28653 29.1827 5.41563C29.621 5.54472 30.0155 5.71353 30.3662 5.9221C30.7266 6.13063 31.014 6.41366 31.2283 6.77116C31.4523 7.12866 31.5643 7.5805 31.5643 8.12666C31.5643 8.68278 31.4134 9.19916 31.1114 9.67585C30.8192 10.1426 30.3662 10.5199 29.7525 10.8079C29.1388 11.086 28.3644 11.225 27.4293 11.225Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M11.1133 11.225L15.7159 0.5H17.5862L22.2035 11.225H20.2163L19.1997 8.74291L18.8796 7.96153L18.5596 7.18014L16.6372 2.48643L14.7218 7.18014H18.5596L18.8796 7.96153L19.1997 8.74291H14.0841L13.0712 11.225H11.1133Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M0 11.225V0.5H1.56344L7.20353 7.76125V0.5H9.08842V11.225H7.52499L1.8849 3.96376V11.225H0Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M102.266 11.225V4.09788V0.5H106.195C107.209 0.5 108.007 0.729821 108.588 1.18946C109.178 1.64911 109.474 2.32836 109.474 3.22721C109.474 3.80943 109.344 4.29973 109.086 4.69809C108.837 5.09641 108.487 5.39264 108.035 5.58673C107.928 5.63331 107.818 5.67428 107.704 5.70967C108.012 5.76329 108.288 5.84488 108.533 5.95441C109.013 6.16891 109.377 6.48048 109.626 6.88903C109.875 7.29761 109.999 7.80323 109.999 8.40586C109.999 9.30473 109.704 9.99928 109.114 10.4896C108.533 10.9799 107.652 11.225 106.471 11.225H102.266ZM102.736 10.7654H106.499C107.486 10.7654 108.238 10.5764 108.754 10.1985C109.271 9.81034 109.529 9.20766 109.529 8.39053C109.529 7.56316 109.271 6.96053 108.754 6.58261C108.238 6.19448 107.486 6.00039 106.499 6.00039H102.66L102.653 5.55609H106.208C107.094 5.55609 107.781 5.362 108.27 4.97386C108.768 4.58573 109.017 4.01371 109.017 3.25786C109.017 2.502 108.768 1.93 108.27 1.54186C107.781 1.15371 107.094 0.959645 106.208 0.959645H102.736V4.09788H102.266V4.82697V5.55609H102.653L102.736 10.7654Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M93.4958 10.75H99.5697V11.225H93.0254V0.5H99.3761V0.974964H93.4958V4.07897H93.0254V5.54075H98.7535V6.01573H93.4958V10.75Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M80.3066 11.225L77 0.5H77.4979L80.6802 10.8726L80.791 11.225L81.5775 8.721L81.3476 7.9735L83.71 0.5H84.1665L87.3129 10.495L87.5387 11.225L88.3256 8.72962L88.0913 7.96928L90.3925 0.5H90.8629L88.3256 8.72962L87.5387 11.225H87.0859L83.8761 1.05157H83.9868L81.5775 8.721L80.791 11.225H80.3066Z"
+                                fill="#C9C8D3" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_1484_14929">
+                                <rect width="110" height="11" fill="white" transform="translate(0 0.5)" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
 </footer>
