--- a/garden-shop/dev/style/scss/main.css
+++ b/garden-shop/dev/style/scss/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: "TTWELLINGTONS";
-  font-feature-settings: "pnum" on, "lnum" on;
+  -webkit-font-feature-settings: "pnum" on, "lnum" on;
+          font-feature-settings: "pnum" on, "lnum" on;
   font-weight: 400;
   font-size: 16px;
   line-height: 140%;
@@ -57,59 +58,89 @@ body {
     line-height: 28px;
   }
 }
+
 .btn {
   font-size: 16px;
   line-height: 1;
   padding: 0.875em 1.5625em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 10px;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 5px;
+  -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   color: #fff;
   --color: #e25b26;
   background: var(--color);
   cursor: pointer;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
+
 .btn:hover {
   --color: #cc5222;
 }
+
 .btn:active {
   --color: #b5491e;
 }
+
 .btn_green {
   --color: #124144;
 }
+
 .btn_green:hover {
   --color: #103b3d;
 }
+
 .btn_green:active {
   --color: #0d2e30;
 }
+
 .btn_transparent {
   background-color: transparent;
   border: 1px solid var(--color);
   color: var(--color);
 }
+
 .btn_large {
   font-size: 24px;
 }
+
 .btn_medium {
   font-size: 16px;
 }
+
 .btn_small {
   font-size: 14px;
 }
+
 .btn_xsmall {
   font-size: 10px;
 }
+
 .btn span {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .orange-text {
