--- a/garden-shop/release/components/footer/footer.html
+++ b/garden-shop/release/components/footer/footer.html
@@ -2,7 +2,126 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__wrapper">
+            <nav class="footer__nav">
+                <ul class="footer__nav-list">
+                    <li class="footer__nav-item footer__nav-item_has-children">
+                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Покупателям</a>
+                        <ul class="footer__subnav">
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Минитракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Мотоблоки</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Навесное оборудование</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Двигатели</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Запасные части</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Гарантия и сервис</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Постановка трактора на
+                                    учет</a></li>
+                        </ul>
+                    </li>
+                    <li class="footer__nav-item footer__nav-item_has-children">
+                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Для бизнеса</a>
+                        <ul class="footer__subnav">
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Навесное оборудование</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Минитракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Мотоблоки</a></li>
 
+                        </ul>
+                    </li>
+                    <li class="footer__nav-item footer__nav-item_has-children">
+                        <a class="footer__nav-link footer__nav-link_lvl1" href="">О компании</a>
+                        <ul class="footer__subnav">
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">СКАУТ ТМ</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Франшиза</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Контакты</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Новости</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Статьи</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Отзывы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Видео</a></li>
+                        </ul>
+                    </li>
+                    <li class="footer__nav-item footer__nav-item_has-children">
+                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Блог</a>
+                        <ul class="footer__subnav">
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">СКАУТ ТМ</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Франшиза</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Контакты</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Новости</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <div class="footer__info">
+                <div class="footer__info-top">
+                    <div class="footer__info-tel">
+                        <a href="8 (800) 101-17-16" class="footer__info-tel-link demibold">8 (800) 101-17-16</a>
+                        <div class="footer__info-tel-label caption">Бесплатная линия по России</div>
+                    </div>
+                    <a href="" class="footer__info-btn btn">Заказать звонок</a>
+                </div>
+                <div class="footer__info-btm">
+                    <div class="footer__info-item">
+                        <div class="footer__info-title caption demibold">Мы принимаем к оплате</div>
+                        <div class="footer__info-payment">
+                            <img src="../../images/mastercard.png" alt="">
+                            <img src="../../images/visa.png" alt="">
+                            <img src="../../images/mir.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer__dev caption demibold">
+        <div class="container">
+            <div class="footer__dev-wrapper">
+                <div class="footer__dev-links ">
+                    <div class="">© 2012 - 2023, Gardenshop, Ltd</div>
+                    <a href="">Политика обработки персональных данных</a>
+                    <a href="">Лицензионное соглашение</a>
+                    <a href="">Карта сайта</a>
+                </div>
+                <a href="https://nastart-web.ru/" target="_blank" class="footer__dev-author">
+                    Разработка сайта
+                    <svg width="110" height="12" viewBox="0 0 110 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_1484_14929)">
+                            <path d="M68.0441 11.225V2.18536H64.6543V0.5H73.3337V2.18536H69.9438V11.225H68.0441Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M54.6934 11.225V0.5H58.9012C59.8073 0.5 60.5817 0.653215 61.2244 0.959645C61.8771 1.26607 62.3791 1.70529 62.7296 2.27729C63.0801 2.84929 63.2558 3.52854 63.2558 4.31503C63.2558 5.10153 63.0801 5.78078 62.7296 6.35278C62.3791 6.91459 61.8771 7.34866 61.2244 7.65511C61.179 7.67613 61.1328 7.6964 61.0858 7.71592L63.431 11.225H61.3854L59.3016 8.08937C59.1711 8.09609 59.0376 8.09941 58.9012 8.09941H56.5927V11.225H54.6934ZM56.5927 6.46003H58.8136C59.6514 6.46003 60.2795 6.27109 60.6986 5.89314C61.1273 5.51522 61.3414 4.98916 61.3414 4.31503C61.3414 3.63068 61.1273 3.10465 60.6986 2.73693C60.2795 2.36921 59.6514 2.18536 58.8136 2.18536H56.5927V6.46003Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M41.5703 11.225L46.1731 0.5H48.0431L52.6605 11.225H50.6732L49.6568 8.74291L49.3367 7.96153L49.0166 7.18014L47.0941 2.48643L45.1787 7.18014H49.0166L49.3367 7.96153L49.6568 8.74291H44.541L43.5283 11.225H41.5703Z"
+                                fill="#C9C8D3" />
+                            <path d="M36.0872 11.225V2.18536H32.6973V0.5H41.3765V2.18536H37.9867V11.225H36.0872Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M27.4293 11.225C26.6305 11.225 25.8658 11.1108 25.1353 10.8824C24.4047 10.6441 23.8251 10.3412 23.3965 9.97375L24.054 8.46928C24.4631 8.79697 24.9697 9.07006 25.5736 9.28853C26.1776 9.507 26.7961 9.61625 27.4293 9.61625C27.965 9.61625 28.3985 9.55666 28.7297 9.4375C29.0609 9.31835 29.3044 9.15944 29.4603 8.96085C29.6161 8.75228 29.6941 8.51894 29.6941 8.26072C29.6941 7.94294 29.5821 7.68972 29.358 7.50103C29.134 7.30244 28.8417 7.1485 28.4813 7.03928C28.1306 6.92009 27.7361 6.81088 27.2978 6.71156C26.8692 6.61225 26.4357 6.49806 25.9974 6.36897C25.5687 6.22994 25.1742 6.05616 24.8138 5.84759C24.4631 5.62912 24.1758 5.34116 23.9517 4.98366C23.7277 4.62616 23.6157 4.16934 23.6157 3.61323C23.6157 3.04719 23.7618 2.5308 24.054 2.06406C24.356 1.5874 24.809 1.21003 25.4129 0.931978C26.0266 0.643993 26.801 0.5 27.7361 0.5C28.3498 0.5 28.9586 0.579445 29.5626 0.738334C30.1665 0.897222 30.6925 1.12563 31.1406 1.42354L30.5416 2.92802C30.0837 2.64997 29.6113 2.44639 29.1242 2.31729C28.6372 2.17826 28.1696 2.10875 27.7215 2.10875C27.1955 2.10875 26.7669 2.1733 26.4357 2.3024C26.1143 2.43149 25.8756 2.60031 25.7197 2.80885C25.5736 3.0174 25.5006 3.25573 25.5006 3.52385C25.5006 3.84163 25.6077 4.09981 25.822 4.29844C26.0461 4.48713 26.3334 4.63606 26.6841 4.74531C27.0445 4.85457 27.4439 4.96378 27.8822 5.07303C28.3206 5.17231 28.7541 5.28653 29.1827 5.41563C29.621 5.54472 30.0155 5.71353 30.3662 5.9221C30.7266 6.13063 31.014 6.41366 31.2283 6.77116C31.4523 7.12866 31.5643 7.5805 31.5643 8.12666C31.5643 8.68278 31.4134 9.19916 31.1114 9.67585C30.8192 10.1426 30.3662 10.5199 29.7525 10.8079C29.1388 11.086 28.3644 11.225 27.4293 11.225Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M11.1133 11.225L15.7159 0.5H17.5862L22.2035 11.225H20.2163L19.1997 8.74291L18.8796 7.96153L18.5596 7.18014L16.6372 2.48643L14.7218 7.18014H18.5596L18.8796 7.96153L19.1997 8.74291H14.0841L13.0712 11.225H11.1133Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M0 11.225V0.5H1.56344L7.20353 7.76125V0.5H9.08842V11.225H7.52499L1.8849 3.96376V11.225H0Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M102.266 11.225V4.09788V0.5H106.195C107.209 0.5 108.007 0.729821 108.588 1.18946C109.178 1.64911 109.474 2.32836 109.474 3.22721C109.474 3.80943 109.344 4.29973 109.086 4.69809C108.837 5.09641 108.487 5.39264 108.035 5.58673C107.928 5.63331 107.818 5.67428 107.704 5.70967C108.012 5.76329 108.288 5.84488 108.533 5.95441C109.013 6.16891 109.377 6.48048 109.626 6.88903C109.875 7.29761 109.999 7.80323 109.999 8.40586C109.999 9.30473 109.704 9.99928 109.114 10.4896C108.533 10.9799 107.652 11.225 106.471 11.225H102.266ZM102.736 10.7654H106.499C107.486 10.7654 108.238 10.5764 108.754 10.1985C109.271 9.81034 109.529 9.20766 109.529 8.39053C109.529 7.56316 109.271 6.96053 108.754 6.58261C108.238 6.19448 107.486 6.00039 106.499 6.00039H102.66L102.653 5.55609H106.208C107.094 5.55609 107.781 5.362 108.27 4.97386C108.768 4.58573 109.017 4.01371 109.017 3.25786C109.017 2.502 108.768 1.93 108.27 1.54186C107.781 1.15371 107.094 0.959645 106.208 0.959645H102.736V4.09788H102.266V4.82697V5.55609H102.653L102.736 10.7654Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M93.4958 10.75H99.5697V11.225H93.0254V0.5H99.3761V0.974964H93.4958V4.07897H93.0254V5.54075H98.7535V6.01573H93.4958V10.75Z"
+                                fill="#C9C8D3" />
+                            <path
+                                d="M80.3066 11.225L77 0.5H77.4979L80.6802 10.8726L80.791 11.225L81.5775 8.721L81.3476 7.9735L83.71 0.5H84.1665L87.3129 10.495L87.5387 11.225L88.3256 8.72962L88.0913 7.96928L90.3925 0.5H90.8629L88.3256 8.72962L87.5387 11.225H87.0859L83.8761 1.05157H83.9868L81.5775 8.721L80.791 11.225H80.3066Z"
+                                fill="#C9C8D3" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_1484_14929">
+                                <rect width="110" height="11" fill="white" transform="translate(0 0.5)" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
 </footer>
