--- a/garden-shop/release/css/style-result.css
+++ b/garden-shop/release/css/style-result.css
@@ -195,8 +195,117 @@ body {
 }
 
 .filler {
-  height: 5000px;
+  height: 1500px;
   background-color: #64bbd1;
+}
+
+.footer {
+  background: #f7f8fb;
+}
+
+.footer__dev-wrapper {
+  display: flex;
+  gap: 60px;
+  justify-content: space-between;
+  align-items: center;
+  color: #c9c8d3;
+  padding: 20px 0;
+}
+
+.footer__dev {
+  border-top: 1px solid #c9c8d3;
+}
+
+.footer__dev-author {
+  display: flex;
+  gap: 7px;
+}
+
+.footer__dev-links {
+  display: flex;
+  gap: 30px;
+}
+
+.footer__wrapper {
+  padding: 60px 0;
+}
+
+.footer__nav {
+  width: 100%;
+  max-width: 1010px;
+}
+
+.footer__nav-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.footer__subnav {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: #8a8894;
+  margin-top: 15px;
+}
+
+.footer__nav-link_lvl1 {
+  color: #3f3f3f;
+  font-weight: 500;
+}
+
+.footer__wrapper {
+  display: flex;
+}
+
+.footer__info-tel {
+  text-align: right;
+}
+
+.footer__info-tel-label {
+  margin-top: 5px;
+  color: #c9c8d3;
+}
+
+.footer__info-top {
+  display: flex;
+  justify-content: flex-end;
+  gap: 70px;
+  margin-bottom: 40px;
+}
+
+.footer__info-title {
+  color: #8a8894;
+  margin-bottom: 10px;
+  text-align: right;
+}
+
+.footer__info-payment {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
+.footer__info-payment img {
+  width: 45px;
+  height: 30px;
+}
+
+.footer__info-btm {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+
+.footer__info {
+  max-width: 490px;
+  width: 100%;
+}
+
+.footer__info-social {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
 }
 
 .header {
